--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -24,6 +24,12 @@
     "account": "Konto",
     "basket": "Koszyk",
     "favourite": "Ulubione",
-    "language": "Język"
+    "language": "Język",
+    "logout": "Wyloguj",
+    "sign-in": "Zaloguj się"
+  },
+  "validation-errors": {
+    "email": "Nieprawidłowy format adresu e-mail",
+    "required": "Pole jest wymagane"
   }
 }
