--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -5,6 +5,12 @@
       "pl": "Polski"
     }
   },
+  "validation-errors": {
+    "email": "Nieprawidłowy format adresu e-mail",
+    "equal": "Wartości nie są równe",
+    "not-white-charackters": "Białe znaki są zabronione",
+    "required": "Pole jest wymagane"
+  },
   "login-component": {
     "access-to-order-status-and-purchase-history": "Dostęp do statusu zamówień oraz historii zakupów",
     "dont-you-have-an-account": "Nie masz konta?",
@@ -12,7 +18,7 @@
     "email": "Email",
     "enter-your-email": "Wprowadź swój email",
     "enter-your-password": "Wprowadź swoje hasło",
-    "newsletter-with-current-information": "Newsletter with current information",
+    "newsletter-with-current-information": "Newsletter z najnowszymi informacjami",
     "our-users-have": "Nasi użytkownicy posiadają:",
     "password": "Hasło",
     "possibilities-of-faster-shopping": "Możliwości szybszych zakupów",
@@ -28,8 +34,15 @@
     "logout": "Wyloguj",
     "sign-in": "Zaloguj się"
   },
-  "validation-errors": {
-    "email": "Nieprawidłowy format adresu e-mail",
-    "required": "Pole jest wymagane"
+  "register-component": {
+    "date-of-birth": "Data urodzenia",
+    "email": "E-mail",
+    "last-name": "Nazwisko",
+    "first-name": "Imię",
+    "password": "Hasło",
+    "phone-number": "Numer telefonu",
+    "registration": "Rejestracja",
+    "repeat-password": "Powtórz hasło",
+    "sign-up": "Zarejestruj się"
   }
 }
