--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -11,10 +11,6 @@
     "not-white-charackters": "Białe znaki są zabronione",
     "required": "Pole jest wymagane"
   },
-  "aside-component": {
-    "categories": "Kategorie",
-    "menu": "Menu"
-  },
   "login-component": {
     "access-to-order-status-and-purchase-history": "Dostęp do statusu zamówień oraz historii zakupów",
     "dont-you-have-an-account": "Nie masz konta?",
@@ -29,6 +25,9 @@
     "sharing-product-reviews": "Udostępnianie recenzji produktów",
     "sign-in": "Zaloguj się",
     "sign-up": "Zarejestruj się"
+  },
+  "menu-aside-component": {
+    "categories": "Kategorie"
   },
   "nav-component": {
     "account": "Konto",
