Ulepszenie responsywnosci w CategoryFormComponent

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,6 +22,8 @@
     "choose-language": "Choose langugae",
     "edit-category": "Edit category",
     "name": "Name",
+    "no-subcategories": "No subcategories",
+    "no-translations": "No translations",
     "parent-category": "Parent category",
     "properties": "Properties",
     "save": "Save",
