--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -22,6 +22,8 @@
     "choose-language": "Wybierz język",
     "edit-category": "Edytuj kategorię",
     "name": "Nazwa",
+    "no-subcategories": "Brak podkategorii",
+    "no-translations": "Brak tłumaczeń",
     "parent-category": "Kategoria nadrzędna",
     "properties": "Właściwości",
     "save": "Zapisz",
