--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,7 @@
     "add-translation": "Add translation",
     "create-category": "Create category",
     "choose-category": "Choose category",
-    "choose-language": "Choose langugae",
+    "choose-sub-category": "Choose subcategory",
     "edit-category": "Edit category",
     "name": "Name",
     "no-subcategories": "No subcategories",
