--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -22,7 +22,7 @@
     "add-translation": "Dodaj tłumaczenie",
     "create-category": "Stwórz kategorię",
     "choose-category": "Wybierz kategorię",
-    "choose-language": "Wybierz język",
+    "choose-sub-category": "Wybierz podkategorię",
     "edit-category": "Edytuj kategorię",
     "name": "Nazwa",
     "no-subcategories": "Brak podkategorii",
